--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@tanstack/react-query": "^5.77.0",
     "@tanstack/react-router": "^1.120.10",
     "@tanstack/react-table": "^8.21.3",
+    "@types/js-cookie": "^3.0.6",
     "aos": "^2.3.4",
     "axios": "^1.9.0",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.511.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
