--- a/package.json
+++ b/package.json
@@ -10,24 +10,28 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.7",
+    "@tailwindcss/vite": "^4.1.11",
     "@tanstack/react-form": "^1.11.3",
-    "@tanstack/react-query": "^5.77.0",
-    "@tanstack/react-router": "^1.120.10",
+    "@tanstack/react-query": "^5.85.0",
+    "@tanstack/react-router": "^1.131.8",
     "@tanstack/react-table": "^8.21.3",
     "@types/js-cookie": "^3.0.6",
     "aos": "^2.3.4",
-    "axios": "^1.9.0",
+    "axios": "^1.11.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.511.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-slick": "^0.30.3",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
     "@types/aos": "^3.0.7",
+    "@types/estree": "^1.0.8",
+    "@types/json-schema": "^7.0.15",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@types/react-slick": "^0.23.13",
