--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/js-cookie": "^3.0.6",
     "aos": "^2.3.4",
     "axios": "^1.11.0",
+    "framer-motion": "^12.23.12",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.511.0",
     "react": "^19.1.0",
