--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-icons": "^5.5.0",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
