--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@tanstack/react-router": "^1.131.27",
     "@tanstack/react-table": "^8.21.3",
     "@types/js-cookie": "^3.0.6",
+    "@zxing/library": "^0.21.3",
     "aos": "^2.3.4",
     "axios": "^1.11.0",
     "framer-motion": "^12.23.12",
     "js-cookie": "^3.0.5",
+    "jsqr": "^1.4.0",
     "lucide-react": "^0.511.0",
     "pigeon-maps": "^0.22.1",
     "react": "^19.1.0",
